Add orbs for background and improve color scheme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="orbs">
+      <div class="orb"></div>
+      <div class="orb"></div>
+      <div class="orb"></div>
+      <div class="orb"></div>
+      <div class="orb"></div>
+    </div>
     <div class="container">
       <h1>DevLemma</h1>
       <p class="tagline">Feeling stuck? Let randomness spark your next idea.</p>
