--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevLemma</title>
+    <title>Devallune</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -15,7 +15,7 @@
       <div class="orb"></div>
     </div>
     <div class="container">
-      <h1>DevLemma</h1>
+      <h1>Devallune</h1>
       <p class="tagline">Feeling stuck? Let randomness spark your next idea.</p>
       <button id="generateButton">🧠 Get an Idea</button>
       <div class="idea-box" id="ideaBox">
