Add footer messsage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </p>
       </div>
     </div>
+    <footer>Made with ❤️ for developers who need a creative nudge</footer>
     <script src="script.js"></script>
   </body>
 </html>
