Add favicon and logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Devallune</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="src/logo.png" type="image/png" />
   </head>
   <body>
     <div class="orbs">
@@ -15,6 +16,9 @@
       <div class="orb"></div>
     </div>
     <div class="container">
+      <div class="logo-container">
+        <img src="src/logo.png" alt="Devallune Logo" class="logo" />
+      </div>
       <h1>Devallune</h1>
       <p class="tagline">Feeling stuck? Let randomness spark your next idea.</p>
       <button id="generateButton">🧠 Get an Idea</button>
@@ -24,7 +28,13 @@
         </p>
       </div>
     </div>
-    <footer>Made with ❤️ for developers who need a creative nudge</footer>
+    <footer>
+      <em
+        >Made by
+        <a href="https://www.linkedin.com/in/ninankhwashu" target="_blank">NN</a
+        >, with ❤️ for developers who need a creative nudge</em
+      >
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
